<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F6CF7"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:id="@+id/infoFilme"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:text="@string/infoFilme"

            android:textAppearance="@style/TextAppearance.AppCompat.Title"

            />

        <EditText

            android:id="@+id/filmeInput"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"

            android:hint="@string/filmeInput"

            android:inputType="text"

            android:autofillHints="" />

        <Button

            android:id="@+id/btnBusca"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"

            android:onClick="BuscaFilmes"

            android:text="@string/btnconsultar"

            />

        <TextView

            android:id="@+id/generoText"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:textAppearance="@style/TextAppearance.AppCompat.Headline"

            />

        <TextView

            android:id="@+id/idiomaText"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"

            android:textAppearance="@style/TextAppearance.AppCompat.Headline"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>