<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F6CF7"
    tools:context=".filme.Filmes">

    <Button
        android:id="@+id/btnup"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:onClick="Alterar"
        android:text="@string/btnalterar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:id="@+id/btninsert"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:onClick="Inserir"
        android:text="@string/btninsert"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:id="@+id/btnconsul"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:onClick="Consultar"
        android:text="@string/btnconsultar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="MissingConstraints,RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>